[tool.poetry]
name = "todolearn"
version = "0.2.0"
description = "Using iCalendar VTODO via ics for learning (flashcards)"
authors = ["Yushin Washio <yuwash@yandex.com>"]
license = "Mozilla Public License Version 2.0"
readme = "README.md"
repository = "https://github.com/yuwash/todolearn"
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Education",
  "Topic :: Education :: Computer Aided Instruction (CAI)",
]

[tool.poetry.dependencies]
python = "^3.9"
ics = "^0.7.2"
arrow = "^1.3.0"
caldav = "^1.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
